--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       </td>
       <td>
           <h1>I'm Mia,reading is my faith</h1>
-          <p><em>when i am frustrated, i talk to my <strong><a href="https://zh.wikipedia.org/wiki/%E8%80%81%E5%8F%8B%E8%AE%B0">friends</a></strong></em></p>
+          <p><em>when i feel awful, i talk to my <strong><a href="https://zh.wikipedia.org/wiki/%E8%80%81%E5%8F%8B%E8%AE%B0">friends</a></strong></em></p>
       </td>
     </tr>
   </table>
